// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lambda Function Deployments Top level cloudformation 1`] = `"2010-09-09"`;

exports[`Lambda Function Deployments apps packaged by rspack App1 Lambda Function 1`] = `
{
  "DependsOn": [
    "App1LogGroup",
  ],
  "Properties": {
    "Code": {
      "S3Bucket": {
        "Ref": "ServerlessDeploymentBucket",
      },
      "S3Key": StringContaining "App1.zip",
    },
    "FunctionName": "complete-example-dev-App1",
    "Handler": "app1.handler",
    "MemorySize": 1024,
    "Role": {
      "Fn::GetAtt": [
        "IamRoleLambdaExecution",
        "Arn",
      ],
    },
    "Runtime": "provided.al2023",
    "Timeout": 6,
  },
  "Type": "AWS::Lambda::Function",
}
`;

exports[`Lambda Function Deployments apps packaged by rspack App1 Lambda Function 2`] = `
{
  "Description": "Current Lambda function version",
  "Export": {
    "Name": "sls-complete-example-dev-App1LambdaFunctionQualifiedArn",
  },
  "Value": {
    "Ref": StringContaining "App1LambdaVersion",
  },
}
`;

exports[`Lambda Function Deployments apps packaged by rspack App1 Lambda Function 3`] = `"import e from"isin-validator";var r={};r.d=(e,a)=>{for(var n in a)r.o(a,n)&&!r.o(e,n)&&Object.defineProperty(e,n,{enumerable:!0,get:a[n]})},r.o=(e,r)=>Object.prototype.hasOwnProperty.call(e,r);var a={};async function n(r){return{statusCode:200,body:JSON.stringify({message:e(r)?"ISIN is invalid!":"ISIN is fine!",input:r})}}r.d(a,{handler:()=>n});var t=a.handler;export{t as handler};"`;

exports[`Lambda Function Deployments apps packaged by rspack app3 Lambda Function 1`] = `
{
  "DependsOn": [
    "App3LogGroup",
  ],
  "Properties": {
    "Code": {
      "S3Bucket": {
        "Ref": "ServerlessDeploymentBucket",
      },
      "S3Key": StringContaining "app3.zip",
    },
    "FunctionName": "complete-example-dev-app3",
    "Handler": "src/App3.handler",
    "MemorySize": 1024,
    "Role": {
      "Fn::GetAtt": [
        "IamRoleLambdaExecution",
        "Arn",
      ],
    },
    "Runtime": "nodejs20.x",
    "Timeout": 6,
  },
  "Type": "AWS::Lambda::Function",
}
`;

exports[`Lambda Function Deployments apps packaged by rspack app3 Lambda Function 2`] = `
{
  "Description": "Current Lambda function version",
  "Export": {
    "Name": "sls-complete-example-dev-App3LambdaFunctionQualifiedArn",
  },
  "Value": {
    "Ref": StringContaining "App3LambdaVersion",
  },
}
`;

exports[`Lambda Function Deployments apps packaged by rspack app3 Lambda Function 3`] = `"import e from"isin-validator";var r={};r.d=(e,a)=>{for(var n in a)r.o(a,n)&&!r.o(e,n)&&Object.defineProperty(e,n,{enumerable:!0,get:a[n]})},r.o=(e,r)=>Object.prototype.hasOwnProperty.call(e,r);var a={};async function n(r){return{statusCode:200,body:JSON.stringify({message:e(r)?"ISIN is invalid!":"ISIN is fine!",input:r})}}r.d(a,{handler:()=>n});var t=a.handler;export{t as handler};"`;

exports[`Lambda Function Deployments apps packaged by rspack app4 Lambda Function 1`] = `
{
  "DependsOn": [
    "App4LogGroup",
  ],
  "Properties": {
    "Code": {
      "S3Bucket": {
        "Ref": "ServerlessDeploymentBucket",
      },
      "S3Key": StringContaining "app4.zip",
    },
    "FunctionName": "complete-example-dev-app4",
    "Handler": "src/app4.handler",
    "MemorySize": 1024,
    "Role": {
      "Fn::GetAtt": [
        "IamRoleLambdaExecution",
        "Arn",
      ],
    },
    "Runtime": "nodejs20.x",
    "Timeout": 6,
  },
  "Type": "AWS::Lambda::Function",
}
`;

exports[`Lambda Function Deployments apps packaged by rspack app4 Lambda Function 2`] = `
{
  "Description": "Current Lambda function version",
  "Export": {
    "Name": "sls-complete-example-dev-App4LambdaFunctionQualifiedArn",
  },
  "Value": {
    "Ref": StringContaining "App4LambdaVersion",
  },
}
`;

exports[`Lambda Function Deployments apps packaged by rspack app4 Lambda Function 3`] = `"import e from"isin-validator";var r={};r.d=(e,a)=>{for(var n in a)r.o(a,n)&&!r.o(e,n)&&Object.defineProperty(e,n,{enumerable:!0,get:a[n]})},r.o=(e,r)=>Object.prototype.hasOwnProperty.call(e,r);var a={};async function n(r){return{statusCode:200,body:JSON.stringify({message:e(r)?"ISIN is invalid!":"ISIN is fine!",input:r})}}r.d(a,{handler:()=>n});var t=a.handler;export{t as handler};"`;

exports[`Lambda Function Deployments apps packaged by rspack app5 Lambda Function 1`] = `
{
  "DependsOn": [
    "App5LogGroup",
  ],
  "Properties": {
    "Code": {
      "S3Bucket": {
        "Ref": "ServerlessDeploymentBucket",
      },
      "S3Key": StringContaining "app5.zip",
    },
    "FunctionName": "complete-example-dev-app5",
    "Handler": "src/deeply/nested/somewhat/app5.handler",
    "MemorySize": 1024,
    "Role": {
      "Fn::GetAtt": [
        "IamRoleLambdaExecution",
        "Arn",
      ],
    },
    "Runtime": "nodejs20.x",
    "Timeout": 6,
  },
  "Type": "AWS::Lambda::Function",
}
`;

exports[`Lambda Function Deployments apps packaged by rspack app5 Lambda Function 2`] = `
{
  "Description": "Current Lambda function version",
  "Export": {
    "Name": "sls-complete-example-dev-App5LambdaFunctionQualifiedArn",
  },
  "Value": {
    "Ref": StringContaining "App5LambdaVersion",
  },
}
`;

exports[`Lambda Function Deployments apps packaged by rspack app5 Lambda Function 3`] = `"import e from"isin-validator";var r={};r.d=(e,a)=>{for(var n in a)r.o(a,n)&&!r.o(e,n)&&Object.defineProperty(e,n,{enumerable:!0,get:a[n]})},r.o=(e,r)=>Object.prototype.hasOwnProperty.call(e,r);var a={};async function n(r){return{statusCode:200,body:JSON.stringify({message:e(r)?"ISIN is invalid!":"ISIN is fine!",input:r})}}r.d(a,{handler:()=>n});var t=a.handler;export{t as handler};"`;
